gccida/g2/get_frame_alias_set
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_frame_alias_set/src/alias.c:1188:10: error: use of undeclared identifier 'set_2'; did you mean 'set_of'?
result = set_2; 
         ^~~~~
         set_of
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_frame_alias_set/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_frame_alias_set/src/alias.c:1189:6: error: use of undeclared identifier 'set_2'; did you mean 'set_of'?
if ( set_2 == -1 ) 
     ^~~~~
     set_of
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_frame_alias_set/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_frame_alias_set/src/alias.c:1193:12: error: use of undeclared identifier 'last_alias_set_5'
result = ++last_alias_set_5; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_frame_alias_set/src/alias.c:1194:1: error: use of undeclared identifier 'set_2'
set_2 = result; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_frame_alias_set/src/obj/alias.o] Error 1
